Change RSVP link to use relative path

--- a/rsvp.html
+++ b/rsvp.html
@@ -35,7 +35,8 @@
         <p class="eyebrow">RSVP</p>
         <h1 class="title">Daniel & Diana — RSVP</h1>
       </div>
-      <a class="btn" href="index.html">← Back</a>
+      <!-- ✅ 상대경로로 변경 -->
+      <a class="btn" href="./index.html">← Back</a>
     </div>
 
     <p>We’d be honored to celebrate with you. Please let us know if you’ll be able to attend.</p>
