--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <a class="btn" href="./index.html">← Back</a>
     </div>
 
-    <p>We’d be honored to celebrate with you. Please let us know if you’ll be able to attend.</p>
+    <p>We’d be honored to celebrate with you.</p>
+    <p>Please let us know if you’ll be able to attend.</p>
 
     <form id="rsvpForm" class="form" novalidate>
       <div class="field">
