Update event date and location details

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         <div class="grid two">
           <div>
             <div class="muted">일시</div>
-            <h3 style="margin:6px 0 0">2026.06.06 (토) • HH:MM</h3>
+            <h3 style="margin:6px 0 0">2026.06.06 (토) • 13:00</h3>
           </div>
           <div>
             <div class="muted">장소</div>
-            <h3 style="margin:6px 0 0">[예식장 이름] [홀명]</h3>
+            <h3 style="margin:6px 0 0">[GRAND BLANC 그랜드 블랑] [Mirabelle Garden 미라벨가든]</h3>
           </div>
         </div>
         <div style="height:12px"></div>
