--- a/index.html
+++ b/index.html
@@ -166,8 +166,13 @@
     <section class="section">
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Directions</p>
-        <iframe class="map" loading="lazy" allowfullscreen
-          src="<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.6071287621585!2d129.12945411139236!3d35.166417572644185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7a3bb7249%3A0xaffba3b439d3a200!2z6re4656c65Oc67iU656RIOybqOuUqe2ZgA!5e0!3m2!1sko!2skr!4v1762822591444!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            class="map"
+            loading="lazy"
+            allowfullscreen
+            referrerpolicy="no-referrer-when-downgrade"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.6071287621585!2d129.12945411139236!3d35.166417572644185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7a3bb7249%3A0xaffba3b439d3a200!2z6re4656c65Oc67iU656RIOybqOuUqe2ZgA!5e0!3m2!1sko!2skr!4v1762822591444!5m2!1sko!2skr">
+        </iframe>
         <p class="muted" style="margin-top:8px">대중교통/주차 안내 등을 여기에 적어 주세요.</p>
       </div>
     </section>
