Update disclaimer text in footer

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <footer class="footer">
       <div>감사합니다. 안전하게 오세요 🙏</div>
-      <div class="disclaimer">이미지/문구/색상은 자유롭게 변경하세요. 호스팅은 GitHub Pages/Netlify 등 무료로 가능합니다.</div>
+      <div class="disclaimer">여기 문구 가능</div>
     </footer>
   </div>
 
