--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@ END:VCALENDAR`;
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
     // 실제 프로젝트 값으로 교체
-    const SUPABASE_URL = "https://xxx.supabase.co";
-    const SUPABASE_ANON_KEY = "xxx";
+    const SUPABASE_URL = "https://khddckyznivjoluwtvxo.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtoZGRja3l6bml2am9sdXd0dnhvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI3MTk1NDYsImV4cCI6MjA3ODI5NTU0Nn0.zblwD4ETNzl1YlFBTfpqvxkvGPrE1RhawPLC9_iUxoE";
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // SHA-256 해시
